commit for week1

--- a/docs/css/week1.css
+++ b/docs/css/week1.css
@@ -1,4 +1,107 @@
-* {
-  margin: 0; 
-  font-family: Helvetica, sans-serif;
+.headerleft {
+    margin-left: 100px;
+    flex: 2;
+    font-size: 22px;
+}
+.headerright {
+    display: flex;
+    flex:1;
+    margin-right: 100px;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+}
+.top1 {
+    background-image:url('../assert/week1/hero.jpg');
+    background-size:100% 100%;
+    display:flex;
+    height: 500px;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+}
+.title1 {
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    margin: 20px;
+}
+.title2 {
+    text-align: center;
+    font-size: 10px;
+    color: white;
+    margin-bottom: 30px;
+}
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+.downloadButton {
+    border: 1px solid;
+    outline: none;
+    background-color: transparent;
+    color: white;
+    width: 150px;
+    height: 40px;
+    margin-right: 10px;
+}
+.readButton {
+    border: 1px solid transparent;
+    outline: none;
+    background-color: #7462F5;
+    color: white;
+    width: 150px;
+    height: 40px;
+}
+.second {
+    display:flex;
+    height: 500px;
+    justify-content:center;
+    align-items: center;
+}
+.imagePreview {
+    margin-left: 100px;
+    height: 350px;
+}
+.article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: left;
+    height: 280px;
+    margin-left:100px;
+    margin-right: 100px;
+}
+.title3 {
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+}
+.title4 {
+    word-wrap: break-word;
+    word-break: break-all;
+    overflow: hidden;
+    width: 200px;
+    font-size: 10px;
+    color: grey;
+    margin-bottom: 30px;
+}
+.third {
+    display:flex;
+    height: 500px;
+    justify-content:center;
+    align-items: center;
+    background-color: gainsboro;
+}
+.footer {
+    display: flex;
+    justify-content:
+    space-between;
+    background: black
+}
+.footTitle {
+    flex:3;
+    color: white;
+    margin-left: 100px;
 }
